Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
Description
(copied from https://bugzilla.redhat.com/show_bug.cgi?id=560102)
When using a persistent store in cluster mode, if you say --no-data-dir, the wrong thing happens at init time, and the broker comes up in a confused state.
Version-Release number of selected component (if applicable): trunk
How reproducible: Always
Steps to Reproduce:
1. Start two brokers with a stores, specify --store-dir, and --no-data-dir
2. Create some objects
3. Bounce and restart a broker
Actual results: Broker recovers objects from the store, when it shouldn't
Expected results: Should get statea from the peer.