QPID-2384: Fix for problem of cluster nodes recovering from both cluster and store when --no-data-dir and --store-dir are in use together.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@905680 13f79535-47bb-0310-9956-ffa450edef68